--- a/myapp/src/app/myfirst.component.html
+++ b/myapp/src/app/myfirst.component.html
@@ -1,3 +1,16 @@
-<div>
+<!-- Forma 1 -->
+
+<!-- <style>
+    .box1 {
+        width: 200px;
+        height: 100px;
+        background: chartreuse;
+        box-shadow: 5px 10px #cccccc;
+        padding: 5px;
+        margin: 10px;
+    }
+</style> -->
+
+<div class="box1">
     <h1>My first component!</h1>
 </div>
