--- a/data-binding-app/src/app/app.component.html
+++ b/data-binding-app/src/app/app.component.html
@@ -1,2 +1,3 @@
+<app-event-binding></app-event-binding>
 <app-property-binding></app-property-binding>
 <app-string-interpolation></app-string-interpolation>
