--- a/data-binding-app/src/app/event-binding/event-binding.component.html
+++ b/data-binding-app/src/app/event-binding/event-binding.component.html
@@ -1,4 +1,27 @@
 <section class="section">
+  <p>
+    <mat-card>
+      <mat-card-content>
+        <p>
+          <mat-checkbox color="warn" (change)="cbChange($event)">Disable / Enable</mat-checkbox>
+        </p>
+        <mat-form-field>
+          <mat-select required [disabled]="selectDisabled" (selectionChange)="select($event)">
+            <mat-option value="Volvo">Volvo</mat-option>
+            <mat-option value="Saab">Saab</mat-option>
+            <mat-option value="Mercedes">Mercedes</mat-option>
+            <mat-option value="Audi">Audi</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <p>Selected option: {{ selectedOption }}</p>
+      </mat-card-actions>
+    </mat-card>
+  </p>
+</section>
+
+<section class="section">
   <button mat-raised-button color="primary" (click)="save()">Save</button>
   <button mat-raised-button color="secondary" (click)="inc()">
     {{ buttonName }}
@@ -6,13 +29,26 @@
 </section>
 
 <section class="section">
-  <button mat-raised-button color="primary" [disabled]="!btnEnabled">My button</button>
-  <button mat-raised-button color="secondary" [disabled]="!btnEnabled">Another button of mine</button>
-  
-  <button mat-raised-button color="warn" [disabled]="!btnEnabled" (click)="disabled()">Disable</button>
-  <mat-progress-spinner class="progress"
+  <button mat-raised-button color="primary" [disabled]="!btnEnabled">
+    My button
+  </button>
+  <button mat-raised-button color="secondary" [disabled]="!btnEnabled">
+    Another button of mine
+  </button>
+
+  <button
+    mat-raised-button
+    color="warn"
+    [disabled]="!btnEnabled"
+    (click)="disabled()"
+  >
+    Disable
+  </button>
+  <mat-progress-spinner
+    class="progress"
     color="primary"
     [mode]="spinnerMode"
-    [value]="value">
-</mat-progress-spinner>
+    [value]="value"
+  >
+  </mat-progress-spinner>
 </section>
