--- a/data-binding-app/src/app/event-binding/event-binding.component.html
+++ b/data-binding-app/src/app/event-binding/event-binding.component.html
@@ -22,6 +22,24 @@
 </section>
 
 <section class="section">
+  <p>
+    <mat-card>
+      <mat-card-content>
+        <mat-form-field appearance="fill">
+          <mat-label>Input</mat-label>
+          <input matInput 
+            (input)="inputEvent($event)" 
+            [value]="inputValue">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        Inputed: {{inputValue}}
+      </mat-card-actions>
+    </mat-card>
+  </p>
+</section>
+
+<section class="section">
   <button mat-raised-button color="primary" (click)="save()">Save</button>
   <button mat-raised-button color="secondary" (click)="inc()">
     {{ buttonName }}
