--- a/directives-app/src/app/ng-class/ng-class.component.html
+++ b/directives-app/src/app/ng-class/ng-class.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Select</mat-card-title>
+    <mat-card-title>Select ngClass</mat-card-title>
     <mat-card-content>
         Please, select one class:
         <mat-form-field>
