--- a/directives-app/src/app/ng-if/ng-if.component.html
+++ b/directives-app/src/app/ng-if/ng-if.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Select</mat-card-title>
+    <mat-card-title>Select ngIf</mat-card-title>
     <mat-card-content>
         <section>
             <p>Select the fields you need:</p>
