--- a/directives-app/src/app/ng-style/ng-style.component.html
+++ b/directives-app/src/app/ng-style/ng-style.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>
-        Select
+        Select ngStyle
     </mat-card-title>
   <mat-card-content>
     <p>Select a color: </p>
